--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingBottom="?attr/actionBarSize"
                 android:layout_below="@+id/toolbar">
 
                 <fragment
